tests/fixtures/invalid/multi/import_private_item/src/lib/lib.gcl
// This const node is private (no `pub` keyword).
// Params are implicitly visible under the A5 rule, so a private
// example must use `node` or `const node`.
const node secret: Dimensionless = 42.0;
